--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,15 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  # Use Audioplayers dependency version 0.17.4
+  audioplayers: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -23,4 +24,6 @@ flutter:
 
   assets:
     - assets/
+
+
 
